--- a/portifolio/assets/styles/style.css
+++ b/portifolio/assets/styles/style.css
@@ -4,9 +4,17 @@
     box-sizing: border-box;
 }
 
+
+
 body{
     background-color: rgb(27, 27, 27);
     font-family: Arial, Helvetica, sans-serif;
+}
+
+body::-webkit-scrollbar {
+    width: 10px;
+    background-color: rgb(207, 135, 2);
+    border-radius: 6px;
 }
 
 header {
@@ -144,7 +152,7 @@ section.projects a{
         margin-right: 16px;
         border: 3px solid orange;
         border-radius: 15px;
-        object-fit: fill;
+        object-fit: cover;
     }
 
     
