--- a/blog/assets/styles/style.css
+++ b/blog/assets/styles/style.css
@@ -149,6 +149,8 @@ section.posts div.post {
         box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.233);
     }
     & a:hover {
+        transform: rotateY(360deg);
+        transition: 0.7s;
         border: 3px solid rgb(78, 78, 255);
         background-color: white;
         color: rgb(78, 78, 255);
@@ -156,3 +158,130 @@ section.posts div.post {
     }
 }
 
+section.about-author {
+    width:80%;
+    margin: 0 auto;
+    display: flex;
+    height: 450px;
+    box-shadow: 15px 15px 10px rgba(78, 78, 255, 0.399);
+    border-radius: 30px;
+    & img {
+        width: 450px;
+        height: 450px;
+        border: 4px solid rgb(78, 78, 255);
+        border-right: 0;
+        border-top-left-radius: 30px;
+        border-bottom-left-radius: 30px;
+ 
+
+    }
+    & .text-about-actor {
+        height: 450px;
+        text-align: left;
+        align-items: flex-start;
+        padding-left: 10px;
+        border: 4px solid rgb(78, 78, 255);
+        border-left: 0;
+        border-top-right-radius: 30px;
+        border-bottom-right-radius: 30px;
+        padding: 10px;
+        & h2 {
+            font-size: 24pt;
+            color: rgb(78, 78, 255);
+        }
+        & p {
+            font-size: 18pt;
+        }
+    }
+}
+
+#talk {
+    text-align: center;
+    margin-top: 70px;
+    font-size: 3rem;
+    background: linear-gradient(to right, #d5daf1,#b495ec ,#4e4eff);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+
+section.contact {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 30px;
+    display: flex;
+    height: 470px;
+    padding: 15px;
+    border: 4px solid #4e4eff;
+    border-radius: 30px;
+    box-shadow: 15px 15px 10px rgba(78, 78, 255, 0.399);
+    & .articles-form {
+        width: 50%;
+        & .articles {
+            & h2 {
+                text-align: left;
+                color: rgb(78, 78, 255);
+                font-size: 22pt;
+            }
+            & p{
+                font-size: 14pt;
+                width: 75%;
+                margin-bottom: 10px;
+            }
+        }
+        & form {
+            display: grid;
+            width: 90%;
+            grid-template-areas: 'nome sobrenome' 'email email' 'phone phone' 'msg msg' 'btn btn';
+            gap: 10px;
+            & input {
+                height: 30px;
+                border: 2px solid rgb(78, 78, 255);
+                padding: 1px;
+                border-radius: 5px;
+            }
+            & #nome {
+                grid-area: nome;
+            }
+            & #sobrenome {
+                grid-area: sobrenome;
+            }
+            & #email {
+                grid-area: email;
+            }
+            & #tel {
+                grid-area: phone;
+            }
+            & #msg {
+                grid-area: msg;
+                height: 120px;
+                text-align: left;
+                padding: 05px;
+                resize: none;
+                border: 2px solid rgb(78, 78, 255);
+                border-radius: 5px;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+            & #btn {
+                grid-area: btn;
+                height: 30px;
+                font-size: 14pt;
+                color: white;
+                border: none;
+                border-radius: 5px;
+                background-color: rgb(78, 78, 255);
+                cursor: pointer;
+            }
+            & #btn:hover {
+                background-color: rgb(63, 63, 255);
+            }
+        }
+    }
+    & .gif {
+        width: 60%;
+        border-radius: 10px;
+        background-repeat: no-repeat;
+        background-size: 100%;
+        background-image: url("../img/Glitch\ Hacking\ GIF\ by\ xponentialdesign.gif");
+    }
+}
