--- a/portifolio/assets/styles/style.css
+++ b/portifolio/assets/styles/style.css
@@ -19,23 +19,30 @@ body::-webkit-scrollbar {
 
 header {
     width: 100%;
-    height: 120px;
+    height: 70px;
     padding: 10px;
     background-color: orange;
     text-align: center;
+    align-items: center;
     position: fixed;
+    display: flex;
+    justify-content: space-between;
     top: 0;
     left: 0;
 }
 
 header nav.navbar {
-    padding-top: 30px;
-    font-size: 25px;
-    flex-wrap: wrap;
+    margin-right: 12px;
+    font-size: 20px;
+    flex-wrap: nowrap;
+    display: flex;
+    gap: 12px;
+    text-align: center;
 }
 
 header nav.navbar a {
-    padding-left: 100px;
+    justify-content: space-around;
+    gap: 12px;
     font-weight: 700;
     text-decoration: none;
     color: black;
@@ -52,6 +59,7 @@ main.apresentacao {
     margin-top: 12%;
     justify-self: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 main.apresentacao img {
@@ -67,19 +75,35 @@ main.apresentacao section{
 
 main.apresentacao section h1{
     padding-bottom: 10px;
-    font-size: 40px;
+    font-size: 30px;
     color: orange;
 }
 
 main.apresentacao section h2 {
     padding-bottom: 05px;
-    font-size: 25px;
+    font-size: 20px;
     color: orange;
 }
 
 main.apresentacao section p {
     color: grey;
-    font-size: 14pt;
+    font-size: 12pt;
+}
+
+main.apresentacao section.social-medias {
+    display: flex;
+    margin-top: 30px;
+    gap: 32px;
+    justify-self: left;
+    & img{
+        width: 50px;
+        border: none;
+        background-color: white;
+    }
+    & img:hover{
+        width: 60px;
+        border: 2px solid orange;
+    }
 }
 
 section.stacks table {
@@ -91,10 +115,16 @@ section.stacks table {
     border: 3px solid orange;
     border-radius: 20px;
     color: white;
+    box-shadow: 0px 0px 20px  orange;
+}
+
+section.stacks table:hover {
+    box-shadow: 0px 0px 50px inset orange;
 }
 
 section.stacks table h1 {
     font-size: 30px;
+    color: orange;
 }
 
 section.stacks table td {
@@ -121,7 +151,7 @@ section.projects {
     margin-top: 03%;
     justify-self: center;
     display: flex;
-    overflow:  scroll;
+    overflow: auto;
 }
 
 section.projects::-webkit-scrollbar{
@@ -157,5 +187,9 @@ section.projects a{
     }
 
     
+}
+
+section.projects a img:hover{
+    box-shadow: 0px 0px 20px  orange;
 }
 
