--- a/blog/posts/styles/style.css
+++ b/blog/posts/styles/style.css
@@ -11,7 +11,7 @@ body {
     display: grid;
     grid-template-areas: 'header header' 'menu main' 'footer footer';
     grid-template-columns: 200px 1fr;
-    grid-template-rows: 80px 1fr 60px;
+    grid-template-rows: 90px 1fr 60px;
 }
 
 header {
@@ -77,6 +77,8 @@ main {
     font-family: Arial, Helvetica, sans-serif;
 
     & article{
+        display: flex;
+        align-content: center;
         width: 90%;
         margin: 0 auto;
         padding: 10px;
@@ -91,9 +93,8 @@ main {
         }
 
         & img {
-            width: 500px;
-            height: 200px;
-            margin-left: 30%;
+            max-width: 100%;
+            height: auto;
             margin-bottom: 10px;
         }
 
@@ -126,6 +127,40 @@ footer {
     & h3 {
         text-align: center;
         align-content: center;
+        margin: 10px;
+    }
+
+}
+
+@media (max-width: 600px){
+    body{
+        grid-template-columns: 3fr;
+    }
+    header{
+        flex-direction: column;
+        background-color: white;
+        & img{
+            width: 0;
+        }
+    }
+    aside {
+        display: none;
+    }
+
+    main {
+        text-align: left;
+        padding-right: 10px;
+        & img {
+            max-width: 100%;
+            height: auto;
+            margin-left: 0;
+
+        }
+    }
+
+    footer {
+        align-items: center;
+        padding-right: 0;
     }
 
 }
