--- a/cafeteria/assets/styles/style.css
+++ b/cafeteria/assets/styles/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 header section.cabecalho {
-    width: 100%;
+    min-width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
