--- a/portifolio/assets/styles/style.css
+++ b/portifolio/assets/styles/style.css
@@ -34,7 +34,7 @@ header {
 header nav.navbar {
     margin-right: 12px;
     font-size: 20px;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     display: flex;
     gap: 12px;
     text-align: center;
@@ -192,4 +192,5 @@ section.projects a{
 section.projects a img:hover{
     box-shadow: 0px 0px 20px  orange;
 }
+
 
