--- a/portifolio/assets/styles/style.css
+++ b/portifolio/assets/styles/style.css
@@ -18,7 +18,7 @@ body::-webkit-scrollbar {
 }
 
 header {
-    width: 100%;
+    min-width: 100%;
     height: 70px;
     padding: 10px;
     background-color: orange;
@@ -66,6 +66,8 @@ main.apresentacao img {
     width: 300px;
     border: 5px solid orange;
     border-radius: 50%;
+    image-rendering: crisp-edges; /* Para navegadores modernos */
+    image-rendering: -webkit-optimize-contrast;
 }
 
 main.apresentacao section{
@@ -73,7 +75,7 @@ main.apresentacao section{
     margin-left: 15px;
 }
 
-main.apresentacao section h1{
+main.apresentacao section #titulo-apresentacao{
     padding-bottom: 10px;
     font-size: 30px;
     color: orange;
@@ -86,7 +88,7 @@ main.apresentacao section h2 {
 }
 
 main.apresentacao section p {
-    color: grey;
+    color: rgb(175, 174, 174);
     font-size: 12pt;
 }
 
@@ -107,8 +109,8 @@ main.apresentacao section.social-medias {
 }
 
 section.stacks table {
-    width: 70%;
-    height: 300px;
+    max-width: 70%;
+    height: auto;
     margin: auto;
     margin-top: 05%;
     padding-top: 15px;
@@ -116,6 +118,7 @@ section.stacks table {
     border-radius: 20px;
     color: white;
     box-shadow: 0px 0px 20px  orange;
+    flex-wrap: wrap;
 }
 
 section.stacks table:hover {
@@ -194,3 +197,61 @@ section.projects a img:hover{
 }
 
 
+@media (max-width: 600px){
+    header{
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+    }
+
+    header nav.navbar{
+        display: none;
+    }
+
+    section.stacks{
+        & table{
+            & td{
+            max-width: 100%;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 12px;
+            justify-content: center;
+            align-items: center;
+            }
+        }
+    }
+
+    section.projects a{
+        width: fit-content;
+    }
+
+    section.projects::-webkit-scrollbar {
+        height: 5px;
+    }
+}
+
+@media (min-width: 600px) and (max-width: 980px){
+    main.apresentacao {
+        justify-content: center;
+        & section h1, h2{
+            text-align: center;
+        }
+
+        & p{
+            margin-left: 40px;
+        }
+    }
+
+    main.apresentacao section.social-medias {
+        justify-self: center;
+    }
+
+    section.projects a{
+        width: fit-content;
+    }
+    
+    section.projects::-webkit-scrollbar {
+        height: 5px;
+    }
+
+}
