--- a/estudos/Portifolio Melhorado/assets/styles/stylenavbar.css
+++ b/estudos/Portifolio Melhorado/assets/styles/stylenavbar.css
@@ -15,8 +15,11 @@ body {
 
 header {
     width: 100%;
-    height: 90rem;
+    height: 10%;
     display: flex;
+    position: fixed;
+    top: 0;
+    left: 0;
     align-items: center;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -37,7 +40,7 @@ header {
 header button.menu-button {
     width: 40rem;
     height: 40rem;
-    position: absolute fixed;
+    position: absolute;
     right: 32rem;
     display: flex;
     flex-direction: column;
@@ -317,7 +320,7 @@ section.formulario form button:active{
 }
 
 
-@media (min-width: 600px){
+@media (min-width: 800px){
     header{
         justify-content: space-between;
         padding: 12px;
