--- a/estudos/Portifolio Melhorado/assets/styles/style.css
+++ b/estudos/Portifolio Melhorado/assets/styles/style.css
@@ -4,26 +4,45 @@
     box-sizing: border-box;
 }
 
+
+
 body{
     background-color: rgb(27, 27, 27);
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body::-webkit-scrollbar {
+    width: 10px;
+    background-color: rgb(207, 135, 2);
+    border-radius: 6px;
+}
+
 header {
-    width: 100%;
-    height: 120px;
+    min-width: 100%;
+    height: 70px;
     padding: 10px;
     background-color: orange;
     text-align: center;
+    align-items: center;
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    top: 0;
+    left: 0;
 }
 
 header nav.navbar {
-    padding-top: 30px;
-    font-size: 25px;
+    margin-right: 12px;
+    font-size: 20px;
+    flex-wrap: wrap;
+    display: flex;
+    gap: 12px;
+    text-align: center;
 }
 
 header nav.navbar a {
-    padding-left: 100px;
+    justify-content: space-around;
+    gap: 12px;
     font-weight: 700;
     text-decoration: none;
     color: black;
@@ -37,51 +56,78 @@ header nav.navbar a:hover {
 main.apresentacao {
     width: 60%;
     display: flex;
-    margin-top: 10%;
+    margin-top: 12%;
     justify-self: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 main.apresentacao img {
     width: 300px;
     border: 5px solid orange;
     border-radius: 50%;
+    image-rendering: crisp-edges; /* Para navegadores modernos */
+    image-rendering: -webkit-optimize-contrast;
 }
 
 main.apresentacao section{
     justify-self: center;
+    margin-left: 15px;
 }
 
-main.apresentacao section h1{
+main.apresentacao section #titulo-apresentacao{
     padding-bottom: 10px;
-    font-size: 40px;
+    font-size: 30px;
     color: orange;
 }
 
 main.apresentacao section h2 {
     padding-bottom: 05px;
-    font-size: 25px;
+    font-size: 20px;
     color: orange;
 }
 
 main.apresentacao section p {
-    color: grey;
-    font-size: 14pt;
+    color: rgb(175, 174, 174);
+    font-size: 12pt;
+}
+
+main.apresentacao section.social-medias {
+    display: flex;
+    margin-top: 30px;
+    gap: 32px;
+    justify-self: left;
+    & img{
+        width: 50px;
+        border: none;
+        background-color: white;
+    }
+    & img:hover{
+        width: 60px;
+        border: 2px solid orange;
+    }
 }
 
 section.stacks table {
-    width: 70%;
-    height: 300px;
+    max-width: 70%;
+    height: auto;
     margin: auto;
     margin-top: 05%;
     padding-top: 15px;
     border: 3px solid orange;
     border-radius: 20px;
     color: white;
+    box-shadow: 0px 0px 20px  orange;
+    flex-wrap: wrap;
+}
+
+section.stacks table:hover {
+    box-shadow: 0px 0px 50px inset orange;
 }
 
 section.stacks table h1 {
     font-size: 30px;
+    color: orange;
 }
 
 section.stacks table td {
@@ -108,21 +154,22 @@ section.projects {
     margin-top: 03%;
     justify-self: center;
     display: flex;
-    overflow:  scroll;
+    overflow: auto;
 }
 
 section.projects::-webkit-scrollbar{
     width: 80%;
     height: 12px;
     background-color: orange;
-    border-radius: 6px
-    
+    border-radius: 6px;
+    cursor: pointer;
 }
 
 ::-webkit-scrollbar-thumb{
     width: 10%;
     background-color: black;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 section.projects a{
@@ -133,15 +180,78 @@ section.projects a{
     text-align: center;
     text-decoration: none;
     color: orange;
+    
     & .projeto{
         width: 300px;
         height: 300px;
         margin-right: 16px;
         border: 3px solid orange;
         border-radius: 15px;
-        object-fit: fill;
+        object-fit: cover;
     }
-
     
 }
 
+section.projects a img:hover{
+    box-shadow: 0px 0px 20px  orange;
+}
+
+
+@media (max-width: 600px){
+    header{
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+    }
+
+    header nav.navbar{
+        display: none;
+    }
+
+    section.stacks{
+        & table{
+            & td{
+            max-width: 100%;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 12px;
+            justify-content: center;
+            align-items: center;
+            }
+        }
+    }
+
+    section.projects a{
+        width: fit-content;
+    }
+
+    section.projects::-webkit-scrollbar {
+        height: 5px;
+    }
+}
+
+@media (min-width: 600px) and (max-width: 980px){
+    main.apresentacao {
+        justify-content: center;
+        & section h1, h2{
+            text-align: center;
+        }
+
+        & p{
+            margin-left: 40px;
+        }
+    }
+
+    main.apresentacao section.social-medias {
+        justify-self: center;
+    }
+
+    section.projects a{
+        width: fit-content;
+    }
+    
+    section.projects::-webkit-scrollbar {
+        height: 5px;
+    }
+
+}
