--- a/estudos/Portifolio Melhorado/assets/styles/stylenavbar.css
+++ b/estudos/Portifolio Melhorado/assets/styles/stylenavbar.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-    font-size: 6.25%; 
+    font-size: 6.25%;
     font-family: Arial, Helvetica, sans-serif;
  }
 
@@ -17,7 +17,7 @@ header {
     width: 100%;
     height: 10%;
     display: flex;
-    position: fixed;
+    position: absolute fixed;
     top: 0;
     left: 0;
     align-items: center;
@@ -320,7 +320,7 @@ section.formulario form button:active{
 }
 
 
-@media (min-width: 800px){
+@media (min-width: 700px){
     header{
         justify-content: space-between;
         padding: 12px;
@@ -394,7 +394,6 @@ section.formulario form button:active{
         width: 200px;
         height: 200px;
     }
-
     section.projects::-webkit-scrollbar{
         height: 8px;
     }
