--- a/gerenciamento-usuarios-escola/assets/styles/style.css
+++ b/gerenciamento-usuarios-escola/assets/styles/style.css
@@ -10,3 +10,28 @@ h1 {
   background-color: #ffffff;
   border-radius: 12px;
 }
+
+
+.btn-add-user {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.7;
+}
+
+.btn-add-user:hover{
+  opacity: 1;
+}
+
+
+.btn-delete-user{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  opacity: 0.7;
+}
+
+.btn-delete-user:hover{
+  opacity: 1;
+}
