Atualizações nos projetos to-do e gerenciamento de usuários, lidando com Promises e fazendo funções de "delay" dando uma impressão mais real de sites com comunicação assíncrona

--- a/gerenciamento-usuarios-escola/assets/styles/style.css
+++ b/gerenciamento-usuarios-escola/assets/styles/style.css
@@ -35,3 +35,12 @@ h1 {
 .btn-delete-user:hover{
   opacity: 1;
 }
+
+.btn-send-modal{
+  opacity: 1;
+  transition: 0.3s
+}
+
+.btn-send-modal:disabled{
+  opacity: 0.5;
+}
